--- a/pom.xml
+++ b/pom.xml
@@ -7,8 +7,10 @@
     <groupId>email-script</groupId>
     <artifactId>email-script</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>war</packaging>
 
     <build>
+        <finalName>test</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
